Fix the header, Center the logo and aligned the left links to the left and right links to the right

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,17 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  
 }
 
 .logo {
@@ -11,9 +22,13 @@
   padding: 4px 32px;
 }
 
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
